--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -14,6 +14,11 @@
             app:navigationIcon="@drawable/ic_arrow_back_24dp"
             app:title="@string/auth_title" />
 
+
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,9 +32,11 @@
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="24dp"
                       android:layout_marginTop="24dp"
-                      android:text="comfyflat-mobile"
+                      android:text="@string/logo_text"
+                      android:textColor="@color/colorPrimary"
                       android:gravity="center"
-                      android:textSize="24dip"/>
+                      android:textSize="26sp"
+                      android:textStyle="bold"/>
 
             <!--  Email Label -->
             <android.support.design.widget.TextInputLayout
@@ -40,7 +47,8 @@
                 <EditText android:id="@+id/input_email"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:inputType="textEmailAddress"/>
+                          android:inputType="textEmailAddress"
+                          android:hint="@string/login_text"/>
             </android.support.design.widget.TextInputLayout>
 
             <!--  Password Label -->
@@ -53,7 +61,7 @@
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textPassword"
-                          android:hint="Password"/>
+                          android:hint="@string/password_text"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.AppCompatButton
@@ -63,17 +71,10 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginBottom="24dp"
                     android:padding="12dp"
-                    android:text="Login"/>
-
-            <TextView android:id="@+id/link_signup"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_marginBottom="24dp"
-                      android:text="No account yet? Create one"
-                      android:gravity="center"
-                      android:textSize="16dip"/>
+                    android:text="@string/login"/>
 
         </LinearLayout>
 
+    </ScrollView>
 </LinearLayout>
 
