--- a/app/src/main/res/layout/fragment_custom_server_auth.xml
+++ b/app/src/main/res/layout/fragment_custom_server_auth.xml
@@ -25,10 +25,12 @@
         android:id="@+id/serverPathValue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:gravity="start"
         android:hint="@string/server_path_hint"
-        android:inputType="textUri"
+        android:imeOptions="actionDone"
+        android:inputType="textShortMessage"
         android:lines="1"
         android:textSize="16sp"
         app:layout_constraintLeft_toRightOf="@id/guideline"
@@ -44,44 +46,19 @@
         app:layout_constraintBaseline_toBaselineOf="@id/serverPathValue"
         app:layout_constraintEnd_toStartOf="@+id/guideline" />
 
-    <EditText
-        android:id="@+id/privateTokenValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="start"
-        android:hint="@string/private_token_hint"
-        android:imeOptions="actionDone"
-        android:inputType="textShortMessage"
-        android:lines="1"
-        android:textSize="16sp"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/serverPathValue" />
-
     <TextView
-        android:id="@+id/privateTokenLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/private_token"
-        android:textSize="16sp"
-        app:layout_constraintBaseline_toBaselineOf="@id/privateTokenValue"
-        app:layout_constraintEnd_toStartOf="@+id/guideline" />
-
-    <TextView
-        android:id="@+id/loginButton"
+        android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="?attr/selectableItemBackground"
         android:padding="8dp"
-        android:text="@string/login"
+        android:text="@string/submit"
         android:textAllCaps="true"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/privateTokenValue" />
+        app:layout_constraintTop_toBottomOf="@id/serverPathValue" />
 
     <TextView
         android:id="@+id/cancelButton"
@@ -94,7 +71,7 @@
         android:textAllCaps="true"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/loginButton"
-        app:layout_constraintTop_toBottomOf="@id/privateTokenValue" />
+        app:layout_constraintRight_toLeftOf="@id/submitButton"
+        app:layout_constraintTop_toBottomOf="@id/serverPathValue" />
 
 </android.support.constraint.ConstraintLayout>
