--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimary">#714fc5</color>
     <color name="colorPrimaryDark">#553E90</color>
     <color name="colorPrimaryLight">#F0EDF9</color>
-    <color name="colorAccent">#EB592E</color>
+    <color name="colorAccent">#553E90</color>
 
     <!--Text color-->
     <color name="primary_text">#ff1f1f1f</color>
