--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
 
+        <item name="android:textColorHint">@color/colorAccent</item>
+
         <item name="popupMenuStyle">@style/PopupMenuTheme</item>
         <item name="textAppearanceLargePopupMenu">@style/TextTitle</item>
 
@@ -48,6 +50,17 @@
     <style name="PopupToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColor">@color/primary_text</item>
+    </style>
+
+    <style name="TextHeadline" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+    </style>
+
+
+    <style name="TextBody" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
