--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/colorPrimary"/>
 
-</selector>
+    <item>
+        <bitmap
+                android:gravity="center"
+                android:src="@drawable/ic_logo"/>
+    </item>
+
+</layer-list>
