--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -42,7 +42,8 @@
             <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
+                    android:textColorHint="@color/secondary_text"
                     android:layout_marginBottom="8dp">
                 <EditText android:id="@+id/input_email"
                           android:layout_width="match_parent"
@@ -54,8 +55,9 @@
             <!--  Password Label -->
             <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
+                    android:textColorHint="@color/secondary_text"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp">
                 <EditText android:id="@+id/input_password"
                           android:layout_width="match_parent"
@@ -64,13 +66,14 @@
                           android:hint="@string/password_text"/>
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.v7.widget.AppCompatButton
+            <Button
                     android:id="@+id/btn_login"
+                    android:textColor="@color/white"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="36dp"
                     android:layout_marginBottom="24dp"
-                    android:padding="12dp"
+                    android:padding="18dp"
                     android:text="@string/login"/>
 
         </LinearLayout>
