--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -35,7 +35,7 @@
                       android:text="@string/logo_text"
                       android:textColor="@color/colorPrimary"
                       android:gravity="center"
-                      android:textSize="26sp"
+                      android:textSize="32sp"
                       android:textStyle="bold"/>
 
             <!--  Email Label -->
@@ -45,11 +45,11 @@
                     android:layout_marginTop="16dp"
                     android:textColorHint="@color/secondary_text"
                     android:layout_marginBottom="8dp">
-                <EditText android:id="@+id/input_email"
+                <EditText android:id="@+id/urlValue"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textEmailAddress"
-                          android:hint="@string/login_text"/>
+                          android:hint="@string/url"/>
             </android.support.design.widget.TextInputLayout>
 
             <!--  Password Label -->
@@ -59,22 +59,22 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp">
-                <EditText android:id="@+id/input_password"
+                <EditText android:id="@+id/realmValue"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:inputType="textPassword"
-                          android:hint="@string/password_text"/>
+                          android:hint="@string/realm"/>
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                    android:id="@+id/btn_login"
+                    android:id="@+id/connectButton"
                     android:textColor="@color/white"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="36dp"
                     android:layout_marginBottom="24dp"
                     android:padding="18dp"
-                    android:text="@string/login"/>
+                    android:text="@string/connect"/>
 
         </LinearLayout>
 
