--- a/app/src/main/res/layout/fragment_session_info.xml
+++ b/app/src/main/res/layout/fragment_session_info.xml
@@ -43,12 +43,13 @@
                         android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/usernameTextView"
+                    android:id="@+id/realmTextView"
                     app:fontFamily="@font/roboto_medium"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textColor="@color/primary_text"
@@ -56,23 +57,8 @@
                     app:layout_constraintLeft_toRightOf="@+id/avatarImageView"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/avatarImageView"
-                    tools:text="pymba86"/>
+                    tools:text="judchin"/>
 
-                <TextView
-                    android:id="@+id/userIdTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@color/secondary_text"
-                    android:textSize="14sp"
-                    app:layout_constraintLeft_toRightOf="@+id/avatarImageView"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
-                    tools:text="babyish"/>
 
                 <View
                     android:layout_width="0dp"
@@ -81,7 +67,7 @@
                     android:background="@color/divider"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/userIdTextView"/>
+                    app:layout_constraintTop_toBottomOf="@+id/avatarImageView"/>
 
             </android.support.constraint.ConstraintLayout>
 
@@ -90,7 +76,7 @@
                 android:layout_height="8dp"/>
 
             <TextView
-                    android:id="@+id/platformUrlTextView"
+                    android:id="@+id/urlTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackground"
