--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -41,24 +41,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:lines="1"
         app:layout_constraintLeft_toRightOf="@id/avatarImageView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/avatarImageView"
-        tools:text="Konstantin Tskhovrebov" />
+        tools:text="judchin" />
 
-    <TextView
-        android:id="@+id/managerKeyTextView"
-        style="@style/TextBody"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:ellipsize="end"
-        android:lines="1"
-        app:layout_constraintLeft_toRightOf="@id/avatarImageView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView"
-        tools:text="gitlab.com" />
 </android.support.constraint.ConstraintLayout>
