--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <!-- Core color -->
     <color name="colorPrimary">#714fc5</color>
-    <color name="colorPrimaryDark">#553E90</color>
+    <color name="colorPrimaryDark">#5D41A2</color>
     <color name="colorPrimaryLight">#F0EDF9</color>
     <color name="colorAccent">#553E90</color>
 
