--- a/app/src/main/res/layout-land/item_progress.xml
+++ b/app/src/main/res/layout-land/item_progress.xml
@@ -5,7 +5,7 @@
              android:padding="16dp">
 
     <include
-        layout="@layout/layout_gitlab_progress"
+        layout="@layout/layout_progress"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"/>
