--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -16,7 +16,7 @@
             android:layout_height="80dp"
             android:layout_margin="8dp"
             app:lottie_autoPlay="true"
-            app:lottie_fileName="lottie/gitlab_progress.json"
+            app:lottie_fileName="lottie/progress.json"
             app:lottie_loop="true"/>
 
         <TextView
