--- a/app/src/main/res/layout/layout_progress.xml
+++ b/app/src/main/res/layout/layout_progress.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="lottie/gitlab_progress.json"
+        app:lottie_fileName="lottie/progress.json"
         app:lottie_loop="true"/>
 </FrameLayout>
